--- a/power_law.Rmd
+++ b/power_law.Rmd
@@ -475,6 +475,12 @@ The Erlang distribution is subexponential. From Wikipedia:
 
 #### Gamma distribution:
 
+The gamma distribution is explained [here](https://probabilityandstats.wordpress.com/tag/gamma-distribution/.
+
+INTUITION: The pdf is just the integrand of the gamma function, and in it there is a polynomial form on the random variable, which tends to give the pdf an initial smooth upswing. Quickly, the exponential part of the pdf kicks in and kills the function. So they tend to have a positive skew. Here are some of the examples discussed below, showing this tendency:
+
+<img width = 600  src = "gammaish.png">
+
 The gamma distribution can be thick-tailed or thin-tailed depending on its shape parameter (α) and a rate parameter ($\beta$) with pdf
 
 $$f_X (x)=\frac{\beta^\alpha}{\color{orange}\Gamma(\alpha)} \color{red}{x^{\alpha - 1}\,e^{-\beta x}} $$
@@ -489,7 +495,7 @@ Thick-tailed: When α is less than or equal to 1, the gamma distribution has a t
 
 The gamma distribution is connected to a number of different distributions:
 
-**Chi-Squared Distribution**: A special case of the gamma distribution with $α = k/2$ and $β = 2.$ if $ X\sim \chi _{k}^{2}$ then $ X\sim {\text{Gamma}}(\alpha ={\frac {k}{2}},\theta =2)$.
+**Chi-Squared Distribution**: A special case of the gamma distribution with $α = k/2$ and $β = 2.$ If $X \sim \chi^2$ then $X\sim \Gamma(\alpha = k/2, \theta = 2)$.
 
 $$f_X(x)=\frac{1}{2^{k/2}\color{orange}\Gamma(k/2)}\color{red}{x^{k/2-1}\,e^{-x/2}}$$
 
@@ -511,6 +517,29 @@ $$f_X(x)=\frac{k}{\lambda}\color{red}{\left(\frac x k\right)^{k-1}\, e^{-(x/\lam
 **Beta distribution**: If $X \sim \Gamma(α, θ)$ and $Y \sim \Gamma(β, θ)$ are independent, then $\frac{X}{X+Y}\sim \beta (α, β)$.
 
 $$f_X(x)=\frac{x^{\alpha -1}(1-x)^{\beta-1}}{\frac{\color{orange}\Gamma(\alpha)\color{orange}\Gamma(\beta)}{\color{orange}\Gamma(\alpha +\beta)}}$$
+
+**Lévy distribution**: The gamma in it may be a bit concealed, but only at first sight, but in fact they are intimately related:
+
+$$f_X(x) = \sqrt{\frac{c}{2\pi}}\frac{e^{\frac{-c}{2(x-\mu)}}}{(x-\mu)^{3/2}}=\sqrt{\frac{c}{2\pi}}\color{red}{(x-\mu)^{-3/2}\,e^{\frac{-c}{2(x-\mu)}}}$$
+
+If $X$ is a random variable following a gamma distribution with shape parameter α and rate parameter β, then the random variable $Y = 1/X$ follows a Lévy distribution with parameter α.
+
+**GEV or Generalized Extreme Value Distribution:** In probability theory and statistics, the generalized extreme value (GEV) distribution[2] is a family of continuous probability distributions developed within extreme value theory to combine the Gumbel, Fréchet and Weibull families also known as type I, II and III extreme value distributions. 
+
+$$f_X(x) =\frac{1}{\sigma}\color{red}{t(x)^{\xi+1}\,e^{-t(x)}}$$
+
+where if $\xi \neq 0$
+
+$$t(x) = \left(1 + \xi\left(\frac{x-\mu}{\sigma} \right)\right)^{-1/\xi}$$
+
+and if $\xi = 0$
+
+$$t(x) = \exp\left(-\frac{x -\mu}{\sigma}\right)$$
+
+**Rayleigh distribution:** If $X$ is distributed as a Reyleigh distribution, the sum of squared $\sum X_i^2$ follows a gamma distribution.
+
+$$f_X(x) = \frac{x}{\sigma^2}\,e^{-x^2/2\sigma^2}$$
+
 
 
 The gamma distribution is used in:
