--- a/power_law.Rmd
+++ b/power_law.Rmd
@@ -487,7 +487,9 @@ The gamma distribution is explained [here](https://probabilityandstats.wordpress
 
 INTUITION: The pdf is just the integrand of the gamma function, and in it there is a polynomial form on the random variable, which tends to give the pdf an initial smooth upswing. Quickly, the exponential part of the pdf kicks in and kills the function. So they tend to have a positive skew. As in the case of the Weibull distribution with $k=1$, the elimination of the polynomial part turns the distribution like an exponential. Here are some of the examples discussed below, showing this tendency:
 
-<img width = 600  src = "gammaish.png">
+<img width = 900  src = "gammaish.png">
+
+[From ModelRisk David Vose, [here](https://www.linkedin.com/pulse/8-probability-distributions-every-risk-analyst-should-david-vose)]
 
 The gamma distribution can be thick-tailed or thin-tailed depending on its shape parameter (α) and a rate parameter ($\beta$) with pdf
 
