--- a/index.Rmd
+++ b/index.Rmd
@@ -48,6 +48,7 @@ output:
 <p><a href="http://rinterested.github.io/statistics/multivariate_gaussian.html">Multivariate Gaussian Distribution</a></p>
 <p><a href="http://rinterested.github.io/statistics/multivariate_normal_draws.html">Multivariate Gaussian Distribution: Random Sampling and the Cholesky</a></p>
 <p><a href="http://rinterested.github.io/statistics/dirichlet.html">Dirichlet distribution</a></p>
+<p><a href="http://rinterested.github.io/statistics/gamma_distribution.html">Gamma Distribution</a></p>
 <p><a href="http://rinterested.github.io/statistics/power_law.html">Power-law, Heavy & Fat-Tailed Distributions</a></p>
 <p><a href="http://rinterested.github.io/statistics/copulas.html">Copulas</a></p>
 <p><a href="http://rinterested.github.io/statistics/mahalanobis.html">Mahalanobis</a></p>
