--- a/gamma_distribution.Rmd
+++ b/gamma_distribution.Rmd
@@ -19,7 +19,7 @@ output:
 
 ---
 
-The gamma distribution can be thick-tailed or thin-tailed depending on its shape parameter (α) and a rate parameter ($\beta$) with pdf
+The gamma distribution has the pdf
 
 $$f_X (x)=\frac{\beta^\alpha}{\color{orange}\Gamma(\alpha)} \color{red}{x^{\alpha - 1}\,e^{-\beta x}} $$
 
@@ -27,9 +27,70 @@ essentially the integrand of the gamma function:
 
 $$\Gamma(z) = \int_0^\infty \color{red}{t^{z-1} \, e^{-t}}\;dt$$
 
-Thin-tailed: When α is greater than 1, the gamma distribution has a relatively thin tail. This means that extreme values are less likely to occur.
+#### Derivation of the gamma pdf:
 
-Thick-tailed: When α is less than or equal to 1, the gamma distribution has a thicker tail, indicating a higher probability of extreme values.
+This is explained [here](https://youtu.be/OdU-nKq6C-U?si=OfCERYSNT6ST3sDw):
+
+Let's define a Poisson counting process with the number of arrivals at a certain time denoted as $N(t)$. As a Poisson process $N(0)=0$, the number of arrivals by time $t$ follows a Poisson distribution,
+
+$$N(t)=\text{Poi}(\lambda t),$$
+
+which has a PMF
+
+$$\frac{\left(\lambda t\right)^{n}\, e^{-\lambda t}}{n!}$$
+
+where $\lambda$ is the rate parameter in $\text{Pois}(\lambda t)$ with $n\in \mathbb N.$
+
+The additional condition is that the inter-arrival times $X_1, X_2,\dots$ are iid. The time to the first arrival is $X_1$ while the time between the first and second arrival is $X_2.$ Therefore, the **inter-arrival time** between arrival $k-1$ and $k$ is $X_k,$ while the **time to the $n$-th arrival** is
+
+$$S_n = \sum_{k=1}^n X_k$$
+
+such that $S_1 = X_1,$ and $S_2 = X_1 + X_2$ to $S_n = X_1 + X_2 + \cdots + X_n.$
+
+The distribution of $X_1$ is
+
+$$\begin{align}
+F_{X_1}(x) &= \Pr(X \leq x) \\
+&= \Pr(\text{at least 1 arrival happens before x})\\
+&=1- \Pr(\text{no arrivals by time t})\\
+&=1 - \Pr(N(t)=0)\\
+&= 1 - \frac{\left(\lambda t\right)^0\, e^{-{\lambda t}}}{0!}\\
+&= 1 - e^{-\lambda t}
+\end{align}$$
+
+which is the CDF of the exponential distribution. So $X_1 \sim \text{Exp}(\lambda)$.
+
+Now the distribution of $S_n$ is
+
+$$\begin{align}
+F_{S_n}(s)&=\Pr(S_n\leq s)\\
+&=\Pr(n\text{ or more arrivals before time }s)\\
+&=\Pr(N(s) \geq n)\\
+&= \sum_{k=n}^{\infty} \frac{(\lambda s)^k\, e^{-\lambda s}}{k!}
+\end{align}$$
+
+The pdf of the time to the $s$ arrival will be the derivative
+
+$$\begin{align}
+f_{S_n}(s) &= \frac{d}{ds}F_{S_n}(s)\\
+&=\sum_{k=n}^{\infty}\frac{d}{ds} \frac{(\lambda s)^k\, e^{-\lambda s}}{k!}\\
+&= \sum_{k=n}^{\infty} \frac{k(\lambda s)^{k-1}\lambda\, e^{-\lambda s}}{k!} + \frac{(\lambda s)^{k}(-\lambda)\, e^{-\lambda s}}{k!}\\
+&=\sum_{k=n}^{\infty} \frac{s^{k-1}\lambda^k\, e^{-\lambda s}}{(k-1)!} - \frac{s^{k}\lambda^{k+1}\, e^{-\lambda s}}{k!}\\
+&= e^{-\lambda s}\left( \sum_{k=n}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!} - \sum_{k=n}^{\infty} \frac{s^{k}\lambda^{k+1}}{k!}  \right)\\
+\end{align}
+$$
+
+Now the first term in the sum
+
+$$\sum_{k=n}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n+1}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n}^{\infty}\frac{s^{k}\lambda^{k+1}}{(k-1)!}$$
+
+Therefore this last summand will be cancelled by the last term, resulting in
+
+$$f_{S_n}(s)=e^{-\lambda s} \frac{\lambda^n s^{n-1}}{(n-1)!} =\frac{\lambda^n}{(n-1)!}s^{n-1}\,e^{-\lambda s}$$
+
+which is the PDF of the gamma.
+
+---
 
 The gamma distribution is explained [here](https://probabilityandstats.wordpress.com/tag/gamma-distribution).
 
