--- a/gamma_distribution.Rmd
+++ b/gamma_distribution.Rmd
@@ -87,7 +87,9 @@ $$
 
 Now the first term in the sum
 
-$$\sum_{k=n}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n+1}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n}^{\infty}\frac{s^{k}\lambda^{k+1}}{(k-1)!}$$
+$$\begin{align}
+\sum_{k=n}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}&=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n+1}^{\infty}\frac{s^{k-1}\lambda^k}{(k-1)!}\\&=\frac{\lambda^n s^{n-1}}{(n-1)!} + \sum_{k=n}^{\infty}\frac{s^{k}\lambda^{k+1}}{(k-1)!}
+\end{align}$$
 
 Therefore this last summand will be cancelled by the last term, resulting in
 
@@ -95,9 +97,13 @@ $$\begin{align}
 f_{S_n}(s)&=e^{-\lambda s} \frac{\lambda^n s^{n-1}}{(n-1)!}\\ &=\frac{\lambda^n}{(n-1)!}s^{n-1}\,e^{-\lambda s}
 \end{align}$$
 
-which is the PDF of the gamma. For comparison:
+which is the PDF of the gamma. 
 
-$$f_X (x)=\frac{\beta^\alpha}{\color{orange}\Gamma(\alpha)} \color{red}{x^{\alpha - 1}\,e^{-\beta x}} $$
+For comparison and from Wikipedia the shape parameter is $\alpha=n$ (the number of arrivals set to determine the probability that it will take different times $s$ to reach the count $n$) and the rate parameter is $\beta=\lambda$:
+
+$$f_X (x)=\frac{\beta^\alpha}{\Gamma(\alpha)} x^{\alpha - 1}\,e^{-\beta x} $$
+
+and $\Gamma(\alpha)=(n-1)!$ with $n\in \mathbb N.$
 
 ---
 
